--- a/projectpkm/pubspec.yaml
+++ b/projectpkm/pubspec.yaml
@@ -29,9 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "^1.6.0"
-  http: ^0.12.0+2
-
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
+  get: ^4.3.8
+  google_fonts: ^2.1.0
+  charts_flutter: ^0.11.0
+  data_table_2: ^2.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -57,12 +60,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
