--- a/projectpkm/pubspec.yaml
+++ b/projectpkm/pubspec.yaml
@@ -65,8 +65,15 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  assets:
-    - assets/icons/
+  # assets:
+  #   - assets/icons/
+  #   - assets/images/KIA.png
+
+  # fonts:
+  #   - family: Montserrat
+  #     fonts:
+  #       - asset: assets/fonts/Montserrat-Bold.ttf
+  #       - asset: assets/fonts/Montserrat-Regular.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
