--- a/projectpkm/web/manifest.json
+++ b/projectpkm/web/manifest.json
@@ -30,6 +30,14 @@
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
+        },
+        {
+            "family": "MaterialCons",
+            "fonts": [
+                {
+                    "asset": "fonts/Monsserrat-Reguler.ttf"
+                }
+            ]
         }
     ]
 }
