--- a/projectpkm/pubspec.yaml
+++ b/projectpkm/pubspec.yaml
@@ -63,9 +63,7 @@ flutter:
   
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/background.png
-    - assets/images/KIA.png
-    - assets/images/pkm.png
+    - assets/images/
 
   #   - assets/icons/
   #   - assets/images/KIA.png
