--- a/projectpkm/pubspec.yaml
+++ b/projectpkm/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   google_fonts: ^2.1.0
   charts_flutter: ^0.11.0
   data_table_2: ^2.1.1
+  carousel_slider: ^4.0.0
+  http: ^0.13.4
+  shared_preferences: ^2.0.8
+  chewie: ^1.2.2
+  video_player: ^2.2.5
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -50,6 +57,7 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
