--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-template-react
+template-react/berry-free-react-admin-template
 material-kit-react-main.zip
 now-ui-kit-react-main.zip
 material-kit-react-main
