--- a/template-react/argon-design-system-react-master/package.json
+++ b/template-react/argon-design-system-react-master/package.json
@@ -52,14 +52,13 @@
     "classnames": "2.2.6",
     "headroom.js": "0.11.0",
     "moment": "2.24.0",
-    "node-sass": "4.13.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "4.0.3",
     "reactstrap": "8.4.1"
   },
   "devDependencies": {
@@ -69,7 +68,9 @@
     "eslint-plugin-flowtype": "3.13.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "jquery": "3.4.1",
-    "typescript": "3.7.5"
+    "jquery": "^3.6.0",
+    "typescript": "3.7.5",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^11.1.1"
   }
 }
