--- a/projectpkm/my-app/package.json
+++ b/projectpkm/my-app/package.json
@@ -49,12 +49,15 @@
     "@mui/material": "^5.0.0",
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
+    "@types/headroom.js": "^0.12.1",
     "apexcharts": "^3.28.3",
     "change-case": "^4.1.2",
+    "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "headroom.js": "^0.12.0",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
@@ -64,8 +67,10 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-lifecycles-compat": "^3.0.4",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
+    "reactstrap": "^8.10.0",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
