--- a/projectpkm/my-app/package.json
+++ b/projectpkm/my-app/package.json
@@ -60,11 +60,13 @@
     "headroom.js": "^0.12.0",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
+    "nouislider": "^15.5.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-custom-scrollbars-2": "^4.4.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-lifecycles-compat": "^3.0.4",
