--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@iconify/icons-ant-design": "^1.1.1",
+    "@iconify/icons-carbon": "^1.1.6",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-fluent": "^1.1.29",
     "@iconify/icons-healthicons": "^1.1.6",
@@ -39,10 +40,12 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-redux": "^7.2.5",
     "react-router": "^6.0.0-beta.4",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1",
+    "redux": "^4.1.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.2",
