--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -46,6 +46,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.2",
