--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ now-ui-kit-react-main.zip
 material-kit-react-main
 PuskesmasProject
 projectpkm/node_modules
+projectpkm/node_modules/.cache/.eslintcache
