--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -27,6 +27,7 @@
     "classnames": "2.3.1",
     "date-fns": "^2.25.0",
     "faker": "^5.5.3",
+    "firebase": "^9.1.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
@@ -41,12 +42,14 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-helmet-async": "^1.1.2",
-    "react-redux": "^7.2.5",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.1.8",
     "react-router": "^6.0.0-beta.4",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1",
     "redux": "^4.1.1",
+    "redux-firestore": "^0.5.7",
     "redux-thunk": "^2.3.0",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
