--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.3.0",
     "@iconify/icons-ant-design": "^1.1.1",
     "@iconify/icons-carbon": "^1.1.6",
+    "@iconify/icons-clarity": "^1.1.2",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-fluent": "^1.1.29",
     "@iconify/icons-healthicons": "^1.1.6",
