--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -26,6 +26,7 @@
     "apexcharts": "^3.29.0",
     "change-case": "^4.1.2",
     "classnames": "2.3.1",
+    "csv": "^5.5.3",
     "date-fns": "^2.25.0",
     "faker": "^5.5.3",
     "firebase": "^7.19.0",
@@ -42,6 +43,7 @@
     "react-apexcharts": "^1.3.9",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-helmet-async": "^1.1.2",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.1.8",
