--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -57,6 +57,7 @@
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.2",
+    "xlsx": "^0.17.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
