--- a/projectpkm/package.json
+++ b/projectpkm/package.json
@@ -11,6 +11,7 @@
     "@iconify/icons-ant-design": "^1.1.1",
     "@iconify/icons-carbon": "^1.1.6",
     "@iconify/icons-clarity": "^1.1.2",
+    "@iconify/icons-et": "^1.1.0",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-fluent": "^1.1.29",
     "@iconify/icons-healthicons": "^1.1.6",
