--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,135 @@ material-kit-react-main
 PuskesmasProject
 projectpkm/node_modules
 projectpkm/node_modules/.cache/.eslintcache
+projectpkm/node_modules/.cache/.eslintcache
+projectpkm/node_modules/.bin/webpack.ps1
+projectpkm/node_modules/.bin/webpack-dev-server.ps1
+projectpkm/node_modules/.bin/webpack-dev-server
+projectpkm/node_modules/.bin/webpack
+projectpkm/node_modules/.bin/watch.ps1
+projectpkm/node_modules/.bin/watch
+projectpkm/node_modules/.bin/uuid.ps1
+projectpkm/node_modules/.bin/uuid
+projectpkm/node_modules/.bin/tsserver.ps1
+projectpkm/node_modules/.bin/tsserver
+projectpkm/node_modules/.bin/tsc.ps1
+projectpkm/node_modules/.bin/tsc
+projectpkm/node_modules/.bin/terser.ps1
+projectpkm/node_modules/.bin/terser
+projectpkm/node_modules/.bin/svgo.ps1
+projectpkm/node_modules/.bin/svgo
+projectpkm/node_modules/.bin/strip-indent.ps1
+projectpkm/node_modules/.bin/strip-indent
+projectpkm/node_modules/.bin/sshpk-verify.ps1
+projectpkm/node_modules/.bin/sshpk-verify
+projectpkm/node_modules/.bin/sshpk-sign.ps1
+projectpkm/node_modules/.bin/sshpk-sign
+projectpkm/node_modules/.bin/sshpk-conv.ps1
+projectpkm/node_modules/.bin/sshpk-conv
+projectpkm/node_modules/.bin/sha.js.ps1
+projectpkm/node_modules/.bin/sha.js
+projectpkm/node_modules/.bin/semver.ps1
+projectpkm/node_modules/.bin/semver
+projectpkm/node_modules/.bin/sassgraph.ps1
+projectpkm/node_modules/.bin/sassgraph
+projectpkm/node_modules/.bin/sane.ps1
+projectpkm/node_modules/.bin/sane
+projectpkm/node_modules/.bin/rollup.ps1
+projectpkm/node_modules/.bin/rollup
+projectpkm/node_modules/.bin/rimraf.ps1
+projectpkm/node_modules/.bin/rimraf
+projectpkm/node_modules/.bin/regjsparser.ps1
+projectpkm/node_modules/.bin/regjsparser
+projectpkm/node_modules/.bin/react-scripts.ps1
+projectpkm/node_modules/.bin/react-scripts
+projectpkm/node_modules/.bin/prettier.ps1
+projectpkm/node_modules/.bin/prettier
+projectpkm/node_modules/.bin/parser.ps1
+projectpkm/node_modules/.bin/parser
+projectpkm/node_modules/.bin/nopt.ps1
+projectpkm/node_modules/.bin/nopt
+projectpkm/node_modules/.bin/node-which.ps1
+projectpkm/node_modules/.bin/node-which
+projectpkm/node_modules/.bin/node-sass.ps1
+projectpkm/node_modules/.bin/node-sass
+projectpkm/node_modules/.bin/node-gyp.ps1
+projectpkm/node_modules/.bin/node-gyp
+projectpkm/node_modules/.bin/nanoid.ps1
+projectpkm/node_modules/.bin/nanoid
+projectpkm/node_modules/.bin/multicast-dns.ps1
+projectpkm/node_modules/.bin/multicast-dns
+projectpkm/node_modules/.bin/mkdirp.ps1
+projectpkm/node_modules/.bin/mkdirp
+projectpkm/node_modules/.bin/mime.ps1
+projectpkm/node_modules/.bin/mime
+projectpkm/node_modules/.bin/miller-rabin.ps1
+projectpkm/node_modules/.bin/miller-rabin
+projectpkm/node_modules/.bin/loose-envify.ps1
+projectpkm/node_modules/.bin/loose-envify
+projectpkm/node_modules/.bin/json5.ps1
+projectpkm/node_modules/.bin/json5
+projectpkm/node_modules/.bin/jsesc.ps1
+projectpkm/node_modules/.bin/jsesc
+projectpkm/node_modules/.bin/js-yaml.ps1
+projectpkm/node_modules/.bin/js-yaml
+projectpkm/node_modules/.bin/jest.ps1
+projectpkm/node_modules/.bin/jest-runtime.ps1
+projectpkm/node_modules/.bin/jest-runtime
+projectpkm/node_modules/.bin/jest
+projectpkm/node_modules/.bin/is-docker.ps1
+projectpkm/node_modules/.bin/is-docker
+projectpkm/node_modules/.bin/is-ci.ps1
+projectpkm/node_modules/.bin/is-ci
+projectpkm/node_modules/.bin/import-local-fixture.ps1
+projectpkm/node_modules/.bin/import-local-fixture
+projectpkm/node_modules/.bin/html-minifier-terser.ps1
+projectpkm/node_modules/.bin/html-minifier-terser
+projectpkm/node_modules/.bin/he.ps1
+projectpkm/node_modules/.bin/he
+projectpkm/node_modules/.bin/gulp.ps1
+projectpkm/node_modules/.bin/gulp
+projectpkm/node_modules/.bin/esvalidate.ps1
+projectpkm/node_modules/.bin/esvalidate
+projectpkm/node_modules/.bin/esparse.ps1
+projectpkm/node_modules/.bin/esparse
+projectpkm/node_modules/.bin/eslint.ps1
+projectpkm/node_modules/.bin/eslint-config-prettier.ps1
+projectpkm/node_modules/.bin/eslint-config-prettier
+projectpkm/node_modules/.bin/eslint
+projectpkm/node_modules/.bin/esgenerate.ps1
+projectpkm/node_modules/.bin/esgenerate
+projectpkm/node_modules/.bin/escodegen.ps1
+projectpkm/node_modules/.bin/escodegen
+projectpkm/node_modules/.bin/errno.ps1
+projectpkm/node_modules/.bin/errno
+projectpkm/node_modules/.bin/detect.ps1
+projectpkm/node_modules/.bin/detect-port.ps1
+projectpkm/node_modules/.bin/detect-port
+projectpkm/node_modules/.bin/detect
+projectpkm/node_modules/.bin/cssesc.ps1
+projectpkm/node_modules/.bin/cssesc
+projectpkm/node_modules/.bin/css-prefers-color-scheme.ps1
+projectpkm/node_modules/.bin/css-prefers-color-scheme
+projectpkm/node_modules/.bin/css-has-pseudo.ps1
+projectpkm/node_modules/.bin/css-has-pseudo
+projectpkm/node_modules/.bin/css-blank-pseudo.ps1
+projectpkm/node_modules/.bin/css-blank-pseudo
+projectpkm/node_modules/.bin/color-support.ps1
+projectpkm/node_modules/.bin/color-support
+projectpkm/node_modules/.bin/browserslist.ps1
+projectpkm/node_modules/.bin/browserslist
+projectpkm/node_modules/.bin/babylon.ps1
+projectpkm/node_modules/.bin/babylon
+projectpkm/node_modules/.bin/babel.ps1
+projectpkm/node_modules/.bin/babel-external-helpers.ps1
+projectpkm/node_modules/.bin/babel-external-helpers
+projectpkm/node_modules/.bin/babel
+projectpkm/node_modules/.bin/autoprefixer.ps1
+projectpkm/node_modules/.bin/autoprefixer
+projectpkm/node_modules/.bin/atob.ps1
+projectpkm/node_modules/.bin/atob
+projectpkm/node_modules/.bin/ansi-html.ps1
+projectpkm/node_modules/.bin/ansi-html
+projectpkm/node_modules/.bin/acorn.ps1
+projectpkm/node_modules/.bin/acorn
+projectpkm/node_modules/.bin/acorn
